Fixed view more bug in search.

--- a/public/views/search.html
+++ b/public/views/search.html
@@ -141,9 +141,9 @@
                                         </div>
 
                                         <div ng-if="post.type == 6">
-                                            <p><strong>SpeciesB : {{post.speciesB}}</strong></p>
-                                            <p><strong>KindB : {{post.kindB}}</strong></p>
-                                            <p><strong>GenderB : {{post.genderB}}</strong></p>
+                                            <p><strong>SpeciesB:</strong> {{post.speciesB}}</p>
+                                            <p><strong>KindB:</strong> {{post.kindB}}</p>
+                                            <p><strong>GenderB:</strong> {{post.genderB}}</p>
                                         </div>
 
                                         <div ng-if="post.note">
