--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -108,7 +108,7 @@
                                                 <!-- display post date -->
                                                 <p><small><em>{{ post.date | date }}</em></small></p>
                                                 <!-- fixing description length to display by 250 chars -->
-                                                <p>{{ post.description.slice(0,250) }}...</p>
+                                                <p style="word-break: break-all; hyphens: auto;">{{ post.description.slice(0,250) }}...</p>
                                                 <!-- link to show post page -->
 
                                                 <button type="button" ng-if="myProfile" ng-click="deletePost(post._id)" class="btn btn-danger" id="delete-btn">Delete</button>
@@ -197,7 +197,7 @@
                                                         <div class="col-md-9" id="right-col">
                                                             <p><em class="date">{{ post.date | date : "MMM d, yyyy h:mm a" }}</em></p>
 
-                                                            <p><strong>Description:</strong> {{post.description}}</p>
+                                                            <p style="word-break: break-all; hyphens: auto;"><strong>Description:</strong> {{post.description}}</p>
 
                                                             <hr>
 
@@ -268,7 +268,10 @@
                 <div class="modal-body">
                     <div ng-if="!messageFail">
                         <div class="modal-body" ng-repeat="message in fullMessages">
-                            <button class="btn-link" ng-click="goToProfile(message.sender)" data-toggle="modal" data-target="#myModal-messages"><b>{{message.sender}}</b></button> : {{message.content}}
+                            <button style="float: left;" class="btn-link" ng-click="goToProfile(message.sender)" data-toggle="modal" data-target="#myModal-messages">
+                                <b>{{message.sender}}</b>
+                            </button>
+                            <p style="word-break: break-all; hyphens: auto; float: left;">&nbsp;{{message.content}}</p>
                             <hr>
                         </div>
                     </div>
