--- a/public/views/search.html
+++ b/public/views/search.html
@@ -141,9 +141,9 @@
                                         </div>
 
                                         <div ng-if="post.type == 6">
-                                            <p><strong>SpeciesB:</strong> {{post.speciesB}}</p>
-                                            <p><strong>KindB:</strong> {{post.kindB}}</p>
-                                            <p><strong>GenderB:</strong> {{post.genderB}}</p>
+                                            <p><strong>Species of the desired animal:</strong> {{post.speciesB}}</p>
+                                            <p><strong>Kind of the desired animal:</strong> {{post.kindB}}</p>
+                                            <p><strong>Gender of the desired animal:</strong> {{post.genderB}}</p>
                                         </div>
 
                                         <div ng-if="post.note">
