--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,5 +1,6 @@
 body {
-    background-image:url("../images/aboutImage.jpg");
+    background-image:linear-gradient(to right, rgba(255,255,255,0.1), rgba(255,255,255,0.1)),
+                     url("../images/about-pic.jpeg");
     background-size: cover;
     background-position: center;
 }
@@ -9,14 +10,20 @@ html {
 }
 
 #jumbo {
-    padding-top: 9%;
-
+    padding-top: 10px;
 }
 
 #info {
-     background-color: rgba(255, 255, 255, 0.5);
-     border-radius: 150px;
-
+    border: 1px solid #dfdede;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 49%;
+    min-width: 400px;
+    margin-top: 50px;
+    margin-left: 1%;
+    margin-bottom: 80px;
+    padding: 0 20px 20px 20px;
+    border-radius: 10px;
 }
 
 .pa {
