--- a/public/css/starterPage.css
+++ b/public/css/starterPage.css
@@ -1,19 +1,22 @@
 body {
-    background-image:url("../images/startImage.jpg");
+    background-image:linear-gradient(to right, rgba(255,255,255,0.1), rgba(255,255,255,0.1)),
+    url("../images/starter-page-pic.jpeg");
     background-size: cover;
     background-position: center;
 }
 
-html {
+/*html {
     height: 100%;
-}
+}*/
 
 .content {
     text-align: center;
     padding-top: 15%;
     font-weight: bold;
+}
 
-
+.container {
+    margin-left: 5%;
 }
 
 h3 {
@@ -31,15 +34,14 @@ h5 {
 }
 
 hr {
-
     width: 400px;
     color: aqua;
 }
 
 #jumbo {
-    width: 500px;
-    height: 500px;
-    margin-top: 50px;
+    width: 460px;
+    height: 460px;
+    margin-top: 0.5%;
     padding-top: 10%;
     border-radius: 700px;
     background-color: rgba(255, 255, 255, 0.5);
