#67 add class to other animal species

--- a/public/views/editPost.html
+++ b/public/views/editPost.html
@@ -53,7 +53,7 @@
                     <div ng-switch-when="exchange">
                         <div class="form-group">
                             <label for="speciesB">Other Animal species </label> <br>
-                            <input type="text" name="speciesB" required ng-model="post.speciesB" placeholder="Other Animal species">
+                            <input type="text" name="speciesB" required ng-model="post.speciesB" placeholder="Other Animal species" class="form-control">
                         </div>
 
                         <div class="form-group">
