add css to upload picture field

--- a/public/views/editPost.html
+++ b/public/views/editPost.html
@@ -82,7 +82,7 @@
 
                 <div class="form-group">
                     <label for="postPic">Edit image</label> <br>
-                    <input type="file" name="postPic" ng-File-Model="post.postPic" />
+                    <input type="file" name="postPic" ng-File-Model="post.postPic" class="form-control" />
                 </div>
 
                 <!--check to be visible type sell only -->
