--- a/public/views/register.html
+++ b/public/views/register.html
@@ -59,7 +59,7 @@
 
             <div class="form-group">
                 <label for="profilePic">Profile picture</label> <br>
-                <input type="file" name="profilePic" ng-File-Model="user.profilePic" />
+                <input type="file" name="profilePic" ng-File-Model="user.profilePic" class="form-control" />
             </div>
             <button type="submit" class="btn btn-success btn-block">Join now</button>
             <div class="alert alert-danger" ng-if="message">{{ message }}</div>
