--- a/public/views/addPost.html
+++ b/public/views/addPost.html
@@ -53,7 +53,7 @@
                         <div class="form-group">
                             <label for="speciesB">Other Animal species (required) </label>
                             <input type="text" name="speciesB" ng-model="post.speciesB" required placeholder="Other Animal species" class="form-control" x>
-                        </div> 
+                        </div>
 
                         <div class="form-group">
                             <label for="kindB"> Other Animal kind (required)</label>
@@ -81,7 +81,7 @@
 
                 <div class="form-group">
                     <label for="postPic">Upload image</label> <br>
-                    <input type="file" name="postPic" ng-File-Model="post.postPic" />
+                    <input type="file" name="postPic" ng-File-Model="post.postPic" class="form-control" />
                 </div>
 
                 <!--check to be visible type sell only -->
