--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="form-group">
                         <label for="profilePicture">Upload image</label> <br>
-                        <input type="file" name="profilePicture" ng-File-Model="edit.profilePicture" />
+                        <input type="file" name="profilePicture" ng-File-Model="edit.profilePicture" class="form-control" />
                     </div>
 
                     <button type="submit" class="btn btn-success" id="edit-btn">Edit yourself!</button>
