add path for home button in not found

--- a/public/views/pageNotFound.html
+++ b/public/views/pageNotFound.html
@@ -1,14 +1,14 @@
 <link rel="stylesheet" href="../css/pageNotFound.css">
 
 <div class="wrap">
-  <div class="logo">
-    <div id="jumbo" class="oops jumbotron container">
-      <p> OOPS! - Could not Find it</p>
-      <div class="sub">
-        <p><a class="btn btn-success" href="#" role="button"><i class="fa fa-sign-in"></i> Home</a></p>
-      </div>
-    </div>
+    <div class="logo">
+        <div id="jumbo" class="oops jumbotron container">
+            <p> OOPS! - Could not Find it</p>
+            <div class="sub">
+                <p><a class="btn btn-success" href="/" role="button"><i class="fa fa-sign-in"></i> Home</a></p>
+            </div>
+        </div>
 
     </div>
-  </div>
+</div>
 </div>
