--- a/public/css/starterPage.css
+++ b/public/css/starterPage.css
@@ -1,48 +1,111 @@
-body {
-    background-image:linear-gradient(to right, rgba(255,255,255,0.1), rgba(255,255,255,0.1)),
-    url("../images/starter-page-pic.jpeg");
-    background-size: cover;
-    background-position: center;
+
+#welcome-div {
+  margin-top: 50px;
+  height: 400px;
+  box-shadow: 10px 10px 12px #c4c4c4;
+  border-radius: 5px;
 }
 
-/*html {
-    height: 100%;
-}*/
-
-.content {
-    text-align: center;
-    padding-top: 15%;
-    font-weight: bold;
+#welcome-text {
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  height: inherit;
+  background: linear-gradient(to right, rgb(46, 145, 247), rgb(29, 191, 235));
 }
 
-.container {
-    margin-left: 5%;
+#welcome-text h1 {
+  width: 70%;
+  font-size: 50px;
+  padding-bottom: 20px;
+  border-bottom: 10px solid rgb(101, 199, 255);
+  color: white;
+  font-size: 60px;
+  position: relative;
+  top: 42%;
+  left: 10%;
+  transform: perspective(1px) translateY(-50%);
+  font-family: 'Roboto', sans-serif;
 }
 
-h3 {
-    font-family:sans-serif;
-    color: darkblue;
-    font-size: bold ;
-    font-size: 5em;
+#welcome-hero {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  height: inherit;
+  background-image: linear-gradient(to right, rgba(46, 145, 247, 0.4), rgba(46, 247, 138, 0.2)),
+                    url("../images/home.jpeg");
+  background-size: cover;
+  background-position: center;
 }
 
-h5 {
-    color: red;
-    font-style: italic;
-    font-family: sans-serif;
-    font-size: 2.5em;
+#welcome-to {
+  font-size: 50px;
 }
 
-hr {
-    width: 400px;
-    color: aqua;
+#short-desc {
+  margin-top: 80px;
+  text-align: center;
+  color: rgb(94, 94, 94);
+  font-size: 18px;
 }
 
-#jumbo {
-    width: 460px;
-    height: 460px;
-    margin-top: 0.5%;
-    padding-top: 10%;
-    border-radius: 700px;
-    background-color: rgba(255, 255, 255, 0.5);
+#short-desc-title {
+  font-size: 21px;
+}
+
+#starter-page-categories {
+  margin-top: 50px;
+}
+
+#starter-page-categories img {
+  height: 200px;
+  width: 100%;
+}
+
+.thumbnail {
+  padding: 0;
+  margin: 1.2em;
+  margin-bottom: 3em;
+  border: none;
+  box-shadow: 10px 10px 12px #e0e0e0;
+}
+
+.thumbnail img {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.thumbnail .caption {
+  font-size: 20px;
+  padding-left: 1.4em;
+  font-family: 'Roboto', sans-serif;
+  height: 120px;
+}
+
+#laster {
+  font-family: 'Roboto', sans-serif;
+  margin-top: 50px;
+  color: white;
+  text-align: center;
+  height: 300px;
+  background: linear-gradient(to right, rgb(46, 145, 247), rgb(29, 235, 173));
+}
+
+#laster div {
+  position: relative;
+  top: 42%;
+  transform: perspective(1px) translateY(-50%);
+}
+
+#laster div a {
+  background-color: rgb(255, 255, 255);
+  color: rgb(46, 145, 247);
+  border: none;
+  margin-top: 1.4em;
+  padding: 10px 40px;
+  font-size: 1.1em;
+}
+
+#laster div a:hover {
+  background-color: rgb(235, 235, 235);
+  color: rgb(23, 134, 247);
 }
