--- a/public/css/starterPage.css
+++ b/public/css/starterPage.css
@@ -13,18 +13,37 @@
   background: linear-gradient(to right, rgb(46, 145, 247), rgb(29, 191, 235));
 }
 
-#welcome-text h1 {
-  width: 70%;
+#welcome-text-content {
+  width: 78%;
+  position: relative;
+  top: 43%;
+  left: 10%;
+  transform: perspective(1px) translateY(-50%);
+  font-family: 'Roboto', sans-serif;
+
+}
+
+#welcome-text-content h1 {
   font-size: 50px;
   padding-bottom: 20px;
   border-bottom: 10px solid rgb(101, 199, 255);
   color: white;
   font-size: 60px;
-  position: relative;
-  top: 42%;
-  left: 10%;
-  transform: perspective(1px) translateY(-50%);
-  font-family: 'Roboto', sans-serif;
+}
+
+#welcome-text-content a {
+  background-color: rgb(255, 255, 255);
+  color: rgb(46, 145, 247);
+  border: none;
+  margin-top: 1.3em;
+  margin-left: auto;
+  padding: 10px 40px;
+  font-size: 1.2em;
+}
+
+#welcome-text-content a:hover {
+  background-color: rgb(235, 235, 235);
+  color: rgb(23, 134, 247);
 }
 
 #welcome-hero {
@@ -66,7 +85,9 @@
   margin: 1.2em;
   margin-bottom: 3em;
   border: none;
-  box-shadow: 10px 10px 12px #e0e0e0;
+  box-shadow: 10px 10px 11px #e0e0e0;
+  transition: 0.17s linear;
+  -webkit-transition: 0.17s linear;
 }
 
 .thumbnail img {
@@ -81,18 +102,32 @@
   height: 120px;
 }
 
+.thumbnail:hover {
+  text-decoration: none;
+  box-shadow: 4px 4px 8px #dedbdb;
+  transition: 0.17s linear;
+  -webkit-transition: 0.17s linear;
+}
+
+#selling-note {
+  font-size: 12px;
+}
+
 #laster {
   font-family: 'Roboto', sans-serif;
   margin-top: 50px;
   color: white;
   text-align: center;
-  height: 300px;
-  background: linear-gradient(to right, rgb(46, 145, 247), rgb(29, 235, 173));
+  height: 350px;
+  background: linear-gradient(to right, rgba(46, 145, 247, 0.8), rgba(29, 235, 173, 0.8)),
+              url("../images/startImage.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 #laster div {
   position: relative;
-  top: 42%;
+  top: 45%;
   transform: perspective(1px) translateY(-50%);
 }
 
@@ -102,7 +137,7 @@
   border: none;
   margin-top: 1.4em;
   padding: 10px 40px;
-  font-size: 1.1em;
+  font-size: 1.2em;
 }
 
 #laster div a:hover {
