changing 'upload image' to 'upload profile picture'

--- a/public/views/editProfile.html
+++ b/public/views/editProfile.html
@@ -65,7 +65,7 @@
                         <input type="text" name="homeNumber" placeholder="Home Number" ng-model="edit.homeNumber" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="profilePicture">Upload image</label> <br>
+                        <label for="profilePicture">Upload profile picture</label> <br>
                         <input type="file" name="profilePicture" ng-File-Model="edit.profilePicture" class="form-control" />
                     </div>
 
