--- a/public/views/starterPage.html
+++ b/public/views/starterPage.html
@@ -28,7 +28,7 @@
     <div class="row">
 
       <div class="col-md-4">
-        <a href="/posts/buy" class="thumbnail">
+        <a href="/posts/f/buy" class="thumbnail">
           <img src="../images/buy.jpg" alt="buy pets">
           <div class="caption">
             <h3>Buy a pet</h3>
