handled no input given

--- a/public/views/advSearch.html
+++ b/public/views/advSearch.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../css/viewMore.css">
 
-<div class="main" ng-controller="advSearchResCtrl">
+<div class="main" ng-controller="advSearchCtrl">
 
     <div ng-if="loading==true">
         <img class="displayed" src="../images/animal.gif" alt="loading">
