--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -122,7 +122,8 @@
                                                 <div class="alert alert-info" ng-if="postMessage">{{postMessage}}</div>
                                             </form>
 
-                                            <a href="" ng-click="visitProfile(post.username)" id="view-contact-btn" class="btn btn-info btn-block" data-dismiss="modal">View contact profile</a>
+                                            <a href="" ng-click="visitProfile(post.username)" id="view-contact-btn" class="btn btn-info btn-block" data-dismiss="modal">View contact profile</a><br>
+                                            <a data-toggle="modal" data-target="#myModal-report">report</a>
                                         </div>
 
                                         <div class="col-md-9" id="right-col">
@@ -165,7 +166,25 @@
 
                         </div>
                         <!--  End of modal-content -->
-
+                        <div id="myModal-report" class="modal fade">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h2>Write your Report Below</h2>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form name="messageForm" ng-submit="report()">
+                                            <textarea name="content" ng-model="reportMessage" placeholder="Write your report here." rows="5" class="form-control"></textarea>
+                                            <button type="submit" class="btn btn-success" id="report-btn">Report</button>
+                                            <div ng-if="reportWarning" class="alert alert-info"> {{reportWarning}}</div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal-report">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <!-- End of if token -->
 
