--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -299,7 +299,7 @@
                     <h2>Write your message Below</h2>
                 </div>
                 <div class="modal-body">
-                    <form name="messageForm" ng-controller="profileCtrl" ng-submit="sendMessage()">
+                    <form name="messageForm" ng-controller="profileCtrl" ng-submit="report()">
                         <textarea name="content" ng-model="content" placeholder="Write your message here." rows="5" class="form-control"></textarea>
                         <button type="submit" class="btn btn-success" id="send-btn">Send</button>
                         <div ng-if="messageIndicator" class="alert alert-info"> {{messageIndicator}}</div>
