--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -123,7 +123,7 @@
                                             </form>
 
                                             <a href="" ng-click="visitProfile(post.username)" id="view-contact-btn" class="btn btn-info btn-block" data-dismiss="modal">View contact profile</a><br>
-                                            <a data-toggle="modal" data-target="#myModal-report">report</a>
+                                            <button type="button" ng-click="openReport()" class="btn btn-danger btn-block">Report</button>
                                         </div>
 
                                         <div class="col-md-9" id="right-col">
@@ -159,32 +159,26 @@
 
                             </div>
                             <!--  End of modal-body -->
-
+                            <div ng-if="report">
+                                <hr>
+                                <div class="modal-body" ng-controller="reportCtrl" id="report-modal">
+                                    <h2>Write your Report Below</h2>
+                                    <div class="modal-body">
+                                        <form name="messageForm" ng-submit="report(post._id)">
+                                            <textarea name="content" ng-model="reportMessage" placeholder="Write your report here." rows="5" class="form-control"></textarea>
+                                            <button type="submit" class="btn btn-success" id="report-btn">Report</button>
+                                            <div ng-if="reportWarning" class="alert alert-danger">{{reportWarning}}</div>
+                                            <div ng-if="reportSuccess" class="alert alert-info">{{reportSuccess}}</div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                             </div>
 
                         </div>
                         <!--  End of modal-content -->
-                        <div id="myModal-report" class="modal fade">
-                            <div class="modal-dialog modal-lg">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h2>Write your Report Below</h2>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form name="messageForm" ng-submit="report()">
-                                            <textarea name="content" ng-model="reportMessage" placeholder="Write your report here." rows="5" class="form-control"></textarea>
-                                            <button type="submit" class="btn btn-success" id="report-btn">Report</button>
-                                            <div ng-if="reportWarning" class="alert alert-info"> {{reportWarning}}</div>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal-report">Close</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                     <!-- End of if token -->
 
