--- a/public/views/posts.html
+++ b/public/views/posts.html
@@ -174,7 +174,7 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" ng-click="close()" class="btn btn-default" data-dismiss="modal">Close</button>
                             </div>
 
                         </div>
